--- a/1_The_Physical/Guess_Point_Level_1_Stateless/1_Red_Green_Refactor/1_1_Fizzbuzz/package.json
+++ b/1_The_Physical/Guess_Point_Level_1_Stateless/1_Red_Green_Refactor/1_1_Fizzbuzz/package.json
@@ -36,6 +36,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^26.6.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "fast-check": "^3.7.1",
     "husky": "^8.0.1",
     "jest": "^28.1.3",
     "nodemon": "^2.0.19",
